# Video2ASCII

./: .gitignore  CMakeLists.txt  Config.h.in  README.org  main.cpp
